fix menu alignment on small screens

--- a/client/components/Menu/Menu.styl
+++ b/client/components/Menu/Menu.styl
@@ -9,7 +9,7 @@
   align-items: center
   z-index: 8
   box-shadow: 0 0 10px #555
-  transition: all .3s
+  transition: all .2s
   transform: scale(1.25)
   &.animation-close
     left: -30%
@@ -60,3 +60,5 @@
   .component.menu
     width: 105vw
     fixed: top -3% left -4% bottom -3%
+    &.animation-open
+      left: -3%
